website: updated the pricing page for launch

--- a/packages/website/src/pages/pricing/pricing.njk
+++ b/packages/website/src/pages/pricing/pricing.njk
@@ -13,7 +13,7 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
   <!-- Section header -->
   <div class="max-w-3xl mx-auto text-center pb-12">
     <h1>Pricing</h1>
-    <p class="text-2xl text-gray-600 dark:text-white dark:text-white">Our pricing is based on the number of developers using uiloos.</p>
+    <p class="text-2xl text-gray-600 dark:text-white">Our pricing is based on the number of domains / developers that use uiloos.</p>
   </div>
 
   <!-- Pricing tables -->
@@ -30,7 +30,7 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
           :class="{'text-gray-500':!value}"
           @click.prevent="value = true"
         >
-          Bill Yearly <span class="text-green-500 dark:text-green-300">-10%</span>
+          Bill Yearly
         </button>
         <button
           class="relative flex-1 text-sm font-medium p-1 transition duration-150 ease-in-out"
@@ -44,7 +44,7 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
 
     <div class="mx-auto grid gap-2 lg:grid-cols-3 xl:gap-4 items-start">
 
-        <!-- Pricing Free -->
+      <!-- Pricing Free -->
       <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
         <div class="mb-4">
           <div class="text-lg font-bold mb-1">Evaluation / Personal use</div>
@@ -85,18 +85,75 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
         </div>
       </div>
 
-      <!-- Pricing Standard -->
+      <!-- Per Domain -->
       <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
+        <div class="absolute top-0 right-0 mr-5 p-3 -mt-5 bg-yellow-500 rounded-full">
+          <svg class="w-4 h-4 fill-current text-white" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+            <path d="M15.145 5.05l-4.316-.627L8.898.513c-.338-.684-1.456-.684-1.794 0l-1.93 3.91-4.317.627a1.002 1.002 0 00-.554 1.707l3.124 3.044-.737 4.3a1 1 0 001.45 1.053L8 13.125l3.862 2.03c.728.381 1.59-.234 1.45-1.054l-.736-4.299L15.7 6.758a1.003 1.003 0 00-.555-1.708z"/>
+          </svg>
+        </div>
+
         <div class="mb-4">
-          <div class="text-lg font-bold mb-1">Standard</div>
+          <div class="text-lg font-bold mb-1">Per Domain</div>
           <div class="inline-flex items-baseline mb-2">
             <span class="text-3xl font-bold">$</span>
-            <span x-text="priceOutput.standard[value].price" class="text-4xl font-bold"></span>
+            <span x-text="priceOutput.domain[value].price" class="text-4xl font-bold"></span>
             <span class="text-sm text-gray-600 dark:text-white pl-2">Ex VAT</span>
           </div>
-          <p x-text="priceOutput.standard[value].description" class="text-gray-600 dark:text-white mb-2" ></p>
-          <div class="text-lg text-gray-800 dark:text-white">For websites, (mobile) applications, SaaS solutions and games.</div>
+          <p x-text="priceOutput.domain[value].description" class="text-gray-600 dark:text-white mb-2" ></p>
+          <div class="text-lg text-gray-800 dark:text-white">For companies that want to use uiloos on their website.</div>
         </div>
+        <ul class="text-gray-600 dark:text-white -mb-2 grow">
+          <li class="flex items-center mb-2">
+            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
+            </svg>
+            <span>Commercial use</span>
+          </li>
+          <li class="flex items-center mb-2">
+            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
+            </svg>
+            <span>Deploy to <a href="?q=production#production" class="underline text-purple-500">production</a></span>
+          </li>
+          <li class="flex items-center mb-2">
+            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
+            </svg>
+            <span>Pay per <a href="?q=domain#domain" class="underline text-purple-500">domain</a></span>
+          </li>
+          <li class="flex items-center mb-2">
+            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
+            </svg>
+            <span><a href="?q=perpetual#perpetual" class="underline text-purple-500">Perpetual</a> license</span>
+          </li>
+            <li class="flex items-center mb-2">
+            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
+            </svg>
+            <span>Support</span>
+          </li>
+        </ul>
+        <div class="border-t border-gray-200 pt-5 mt-6">
+          <a class="btn-sm text-white bg-blue-600 hover:bg-blue-700 w-full" href="https://dashboard.uiloos.dev">Buy now</a>
+        </div>
+      </div>
+
+      <!-- Per Developer -->
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
+        <div class="mb-4">
+          <div class="text-lg font-bold mb-1">Per developer</div>
+          <div class="inline-flex items-baseline mb-2">
+            <span class="text-3xl font-bold">$</span>
+            <span x-text="priceOutput.developer[value].price" class="text-4xl font-bold"></span>
+            <span class="text-sm text-gray-600 dark:text-white pl-2">Ex VAT</span>
+          </div>
+          <p x-text="priceOutput.developer[value].description"class="text-gray-600 dark:text-white mb-2" ></p>
+          
+          <div class="text-lg text-gray-800 dark:text-white">For web agencies that plan on using uiloos for multiple domains.</div>
+        </div>
+
         <ul class="text-gray-600 dark:text-white -mb-2 grow">
           <li class="flex items-center mb-2">
             <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
@@ -122,7 +179,7 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
             </svg>
             <span><a href="?q=perpetual#perpetual" class="underline text-purple-500">Perpetual</a> license</span>
           </li>
-            <li class="flex items-center mb-2">
+          <li class="flex items-center mb-2">
             <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
               <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
             </svg>
@@ -133,64 +190,11 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
           <a class="btn-sm text-white bg-blue-600 hover:bg-blue-700 w-full" href="https://dashboard.uiloos.dev">Buy now</a>
         </div>
       </div>
-
-      <!-- Pricing Enterprise -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white dark:bg-gray-900 shadow-xl">
-        <div class="absolute top-0 right-0 mr-5 p-3 -mt-5 bg-yellow-500 rounded-full">
-          <svg class="w-4 h-4 fill-current text-white" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
-            <path d="M15.145 5.05l-4.316-.627L8.898.513c-.338-.684-1.456-.684-1.794 0l-1.93 3.91-4.317.627a1.002 1.002 0 00-.554 1.707l3.124 3.044-.737 4.3a1 1 0 001.45 1.053L8 13.125l3.862 2.03c.728.381 1.59-.234 1.45-1.054l-.736-4.299L15.7 6.758a1.003 1.003 0 00-.555-1.708z"/>
-          </svg>
-        </div>
-        
-        <div class="mb-4">
-          <div class="text-lg font-bold mb-1">Enterprise</div>
-          <div class="inline-flex items-baseline mb-2">
-            <span class="text-3xl font-bold">$</span>
-            <span x-text="priceOutput.enterprise[value].price" class="text-4xl font-bold"></span>
-            <span class="text-sm text-gray-600 dark:text-white pl-2">Ex VAT</span>
-          </div>
-          <p x-text="priceOutput.enterprise[value].description"class="text-gray-600 dark:text-white mb-2" ></p>
-          <div class="text-lg text-gray-800 dark:text-white">For larger companies with more than 50 developers</div>
-        </div>
-
-        <ul class="text-gray-600 dark:text-white -mb-2 grow">
-          <li class="flex items-center mb-2">
-            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
-            </svg>
-            <span>Commercial use</span>
-          </li>
-          <li class="flex items-center mb-2">
-            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
-            </svg>
-            <span>Deploy to <a href="?q=production#production" class="underline text-purple-500">production</a></span>
-          </li>
-          <li class="flex items-center mb-2">
-            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
-            </svg>
-            <span>Unlimited developers</span>
-          </li>
-          <li class="flex items-center mb-2">
-            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
-            </svg>
-            <span><a href="?q=perpetual#perpetual" class="underline text-purple-500">Perpetual</a> license</span>
-          </li>
-          <li class="flex items-center mb-2">
-            <svg class="w-3 h-3 fill-current text-green-500 mr-3 shrink-0" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg">
-              <path d="M10.28 2.28L3.989 8.575 1.695 6.28A1 1 0 00.28 7.695l3 3a1 1 0 001.414 0l7-7A1 1 0 0010.28 2.28z"/>
-            </svg>
-            <span>Live support</span>
-          </li>
-        </ul>
-        <div class="border-t border-gray-200 pt-5 mt-6">
-          <a class="btn-sm text-white bg-blue-600 hover:bg-blue-700 w-full" href="https://dashboard.uiloos.dev">Buy now</a>
-        </div>
-      </div>
     </div>
+
+    <p class="mt-8 text-gray-800 dark:text-white">*The price increases as more components are released, buy early and get grandfathered on your plan.</p>
   </div>
+
 
   <!-- Pricing toggle data -->
   <script defer>
@@ -198,36 +202,32 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
       Alpine.data('pricingSwitch', () => ({
         value: true,
         priceOutput: {
-          standard: {
+          developer: {
             // Monthly
             false: {
-              price: "4.99",
+              price: "0.99",
               mode: "pay_per_developer",
-              interval: "monthly",
               description: "Per developer / per month"
             },
             // Yearly
             true: {
-              price: "52.99",
+              price: "9.99",
               mode: "pay_per_developer",
-              interval: "monthly",
               description: "Per developer / per year"
             }
           },
-          enterprise: {
+          domain: {
             // Monthly
             false: {
-              price: "249.99",
+              price: "4.99",
               mode: "unlimited",
-              interval: "yearly",
-              description: "Per year"
+              description: "Per domain / per month"
             },
             // Yearly
             true: {
-              price: "2699.99",
+              price: "49.99",
               mode: "unlimited",
-              interval: "yearly",
-              description: "Per year"
+              description: "Per domain / per year"
             }
           }
         }
@@ -306,6 +306,66 @@ keywords: "uiloos, pricing, billing, pricing Q&A"
           will indirectly benefit from "uiloos", so they will still count as 
           developers which need seats.
         </p>
+      </div>
+    </li>
+     <li x-data="{ expanded: window.location.href.indexOf('domain') !== -1 }" id="domain">
+      <button
+        class="flex items-center w-full text-lg font-medium text-left py-5 border-t border-gray-200"
+        @click="expanded = !expanded"
+        :aria-expanded="expanded"
+      >
+        <svg
+          class="w-4 h-4 fill-current text-blue-500 shrink-0 mr-8 -ml-12"
+          viewBox="0 0 16 16"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect
+            y="7"
+            width="16"
+            height="2"
+            rx="1"
+            class="transform origin-center transition duration-200 ease-out"
+            :class="{'rotate-180': expanded}"
+          />
+          <rect
+            y="7"
+            width="16"
+            height="2"
+            rx="1"
+            class="transform origin-center rotate-90 transition duration-200 ease-out"
+            :class="{'rotate-180': expanded}"
+          />
+        </svg>
+        <span>What falls under a domain?</span>
+      </button>
+      <div
+        x-ref="item"
+        class="overflow-hidden transition-all duration-300 ease-in-out"
+        :style="expanded ? 'max-height: ' + $refs.item.scrollHeight + 'px; opacity: 1' : 'max-height: 0; opacity: 0'"
+      >
+        <p>
+          Say for example your domain is <span class="high">foo.com</span> you are allowed
+          to use uiloos for all domains and subdomains of that domain. 
+        </p>
+
+        <p>
+          <b>In our example the following would be fall under the license:</b>
+        </p>
+
+        <ol class="grid gap-2 mb-4">
+          <li><span class="high">foo.com</span></li>
+          <li><span class="high">www.foo.com</span></li>
+          <li><span class="high">bar.foo.com</span></li>
+        </ol>
+
+        <p>
+          <b>However the following domains would not fall under your license:</b>
+        </p>
+
+        <ol class="grid gap-2">
+          <li><span class="high">foo-bar.com</span></li>
+          <li><span class="high">bar.com</span></li>
+        </ol>
       </div>
     </li>
     <li x-data="{ expanded: window.location.href.indexOf('production') !== -1 }" id="production">
