--- a/packages/website/src/pages/api/core/core.njk
+++ b/packages/website/src/pages/api/core/core.njk
@@ -21,6 +21,6 @@ keywords: "API hub @uiloos/core"
 
   <p>The core of uiloos consists of pure JavaScript classes and functions.</p>
   
-  {{ displayApiGroup(distilled.core, ['ActiveList', 'ViewChannel', 'Typewriter', 'License', 'Generic']) }}
+  {{ displayApiGroup(distilled.core, ['ActiveList', 'ViewChannel', 'Typewriter', 'DateGallery', 'License', 'Generic']) }}
 
 </article>
