--- a/packages/website/src/pages/api/core/api-pages.njk
+++ b/packages/website/src/pages/api/core/api-pages.njk
@@ -17,6 +17,7 @@ eleventyComputed:
 {% from "../_includes/typealias.njk" import typealiasPage %}
 {% from "../_includes/instance.njk" import instancePage %}
 {% from "../_includes/interface.njk" import interfacePage %}
+{% from "../_includes/constant.njk" import constantPage %}
 
 {% if def.kindString === 'error' %}
   {{ errorPage(def) }}
@@ -30,5 +31,7 @@ eleventyComputed:
   {{ instancePage(def) }}
 {% elif def.kindString === 'interface' %}
   {{ interfacePage(def) }}
+{% elif def.kindString === 'constant' %}
+  {{ constantPage(def) }}
 {% endif %}
 
