--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -119,7 +119,7 @@ keywords: "ActiveList concept, ActiveList overview, ActiveList use-cases, auto p
   <p>
     The ActiveList can be initialized by calling the <a href="/api/core/activelist/#constructor" class="high underline">constructor</a>.
     The constructor takes two arguments the <a href="/api/core/activelistconfig/" class="high underline">config</a>
-    and an optional <a href="/api/core/activelistsubscriber/" class="high underline">subscriber</a>
+    and an optional <a href="/api/core/activelistsubscriber/" class="high underline">subscriber</a>.
   </p>
 
   <p>
@@ -140,7 +140,7 @@ keywords: "ActiveList concept, ActiveList overview, ActiveList use-cases, auto p
     When using reactive frameworks such as React, Vue, Angular or Svelte etc etc. 
     The subscriber is not necessary since your framework of choice will do the 
     heavy lifting of syncing the state of the ActiveList with the DOM. For more information see 
-    <a href="/docs/active-list/usage-with-frameworks/" class="underline">"Usage with Framework"</a>
+    <a href="/docs/active-list/usage-with-frameworks/" class="underline">"Usage with Frameworks"</a>
   </p>
 
   {% include './concepts/initialization.njk' %}
