--- a/packages/website/src/pages/docs/view-channel/concept.njk
+++ b/packages/website/src/pages/docs/view-channel/concept.njk
@@ -122,7 +122,7 @@ keywords: "ViewChannel concept, ViewChannel overview, ViewChannel use-cases, aut
   <p>
     When using reactive frameworks such as React, Vue, Angular or Svelte etc etc. 
     The subscriber is not necessary since your framework of choice will do the 
-    heavy lifting of syncing the state of the ViewChannel with the DOM. For more information see <a href="/docs/view-channel/usage-with-frameworks/" class="underline">"Usage with Framework"</a>
+    heavy lifting of syncing the state of the ViewChannel with the DOM. For more information see <a href="/docs/view-channel/usage-with-frameworks/" class="underline">"Usage with Frameworks"</a>
   </p>
 
   {% include './concepts/initialization.njk' %}
