--- a/packages/website/src/_includes/components/navigation.njk
+++ b/packages/website/src/_includes/components/navigation.njk
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Desktop navigation -->
-    <nav class="hidden md:flex md:grow">
+    <nav class="hidden lg:flex lg:grow">
       <!-- Desktop menu links -->
       {% set navPages = collections.all | eleventyNavigation %}
       <ul class="flex grow justify-end flex-wrap items-center">
@@ -46,7 +46,7 @@
       </ul>
     </nav>
 
-    <div class="flex justify-end grow md:grow-0 mr-4">
+    <div class="flex justify-end grow lg:grow-0 mr-4">
       <button
         class="mx-2" 
         id="darkModeToggle"
@@ -70,7 +70,7 @@
     </div>  
 
     <!-- Mobile menu -->
-    <div class="flex md:hidden" x-data="{ expanded: false }">
+    <div class="flex lg:hidden" x-data="{ expanded: false }">
       <!-- Hamburger button -->
       <button
         class="hamburger"
