--- a/packages/website/src/pages/docs/date-gallery/concept.njk
+++ b/packages/website/src/pages/docs/date-gallery/concept.njk
@@ -663,10 +663,10 @@ keywords: "DateGallery concept, DateGallery overview, DateGallery use-cases, dat
 
   <a
     class="card"
-    href="/docs/date-gallery/tutorial/"
+    href="/docs/date-gallery/tutorials/"
   >
     <div>
-      <div class="text-normal font-medium mb-1">Tutorial</div>
+      <div class="text-normal font-medium mb-1">Tutorials</div>
       <div class="text-sm">Learn how to use the DateGallery</div>
     </div>
     <svg
