--- a/packages/website/src/styles/additional-styles/utility-patterns.scss
+++ b/packages/website/src/styles/additional-styles/utility-patterns.scss
@@ -122,6 +122,24 @@ details {
   font-weight: bold;
 }
 
+.important {
+  @apply bg-red-100 dark:bg-gray-800 px-4 py-4 border-red-500 border-l-8 
+}
+
+div.important, div.note {
+  @apply mb-4;
+}
+
+div.important > p:last-child, div.note > p:last-child {
+  margin-bottom: 0;
+}
+
+.important::before{
+  content: 'Important';
+  display: block;
+  font-weight: bold;
+}
+
 .card {
   @apply flex justify-between items-center p-4 rounded border border-gray-200 transition duration-300 ease-in-out bg-white dark:bg-gray-900 shadow-md hover:shadow-lg mb-4
 }
