--- a/packages/website/src/pages/docs/getting-started/overview.njk
+++ b/packages/website/src/pages/docs/getting-started/overview.njk
@@ -112,6 +112,12 @@ keywords: "uiloos overview, uiloos reason for existing, uiloos philosophy, what 
       <h3 class="high leading-snug tracking-tight mb-1">Typewriter</h3>
       <p class="text-gray-800 dark:text-white text-center">A component to create text based animation with.</p>
     </a>
+
+    <!-- 4th item -->
+    <a class="relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl h-full" href="/docs/date-gallery/concepts/">
+      <h3 class="high leading-snug tracking-tight mb-1">DateGallery</h3>
+      <p class="text-gray-800 dark:text-white text-center">A component for creating date pickers and calendars.</p>
+    </a>
   </div>
 
   <p>
