--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -30,7 +30,7 @@ keywords: "uiloos API, uiloos api"
   <div class="flex flex-wrap justify-center items-stretch gap-8 mb-8 md:mb-0">
     <a href="/api/core" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-sm hover:shadow-2xl">
       <img src="/images/frameworks/vanilla.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
-      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Vanilla</span>
+      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Core</span>
     </a>
     
     <a href="/api/react" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-sm hover:shadow-2xl">
