--- a/packages/website/src/pages/docs/active-list/tutorials/basic.njk
+++ b/packages/website/src/pages/docs/active-list/tutorials/basic.njk
@@ -769,7 +769,7 @@ onAutoPlayPlaying(event, carousel) {
       </li>
       <li class="ml-8 mb-4">
         When using vanilla JavaScript you must handle DOM manipulation yourself, 
-        contrast this with <a href="/docs/active-list/examples/" class="underline">the examples that use a JavaScript framework</a>.
+        contrast this with <a href="/docs/active-list/examples/" class="underline">the examples that use a framework</a>.
       </li>
     </ol>
   </section>
