--- a/packages/website/src/pages/docs/typewriter/tutorials/single-cursor.njk
+++ b/packages/website/src/pages/docs/typewriter/tutorials/single-cursor.njk
@@ -331,7 +331,7 @@ function subscriber(typewriter) {
       </li>
       <li class="ml-8 mb-4">
         When using vanilla JavaScript you must handle DOM manipulation yourself, 
-        contrast this with <a href="/docs/typewriter/examples/" class="underline">the examples that use a JavaScript framework</a>.
+        contrast this with <a href="/docs/typewriter/examples/" class="underline">the examples that use a framework</a>.
       </li>
     </ol>
   </section>
