--- a/packages/website/src/pages/docs/view-channel/tutorial.njk
+++ b/packages/website/src/pages/docs/view-channel/tutorial.njk
@@ -57,7 +57,7 @@ keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
   </nav>
 
   <section>
-    <h2 id="introduction" ><a href="#introduction">1. Introduction</a></h2>
+    <h2 id="introduction"><a href="#introduction">1. Introduction</a></h2>
 
     <p>
       We are going to build a flash message system in vanilla JavaScript.
@@ -84,7 +84,7 @@ keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
   </section>
 
   <section>
-    <h2 id="files-overview" ><a href="#files-overview">2. Files overview</a></h2>
+    <h2 id="files-overview"><a href="#files-overview">2. Files overview</a></h2>
 
     <p>
       In the sandbox you will see a couple of files:
@@ -114,7 +114,7 @@ keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
   </section>
 
   <section>
-    <h2 id="goals" ><a href="#goals">3. Goals</a></h2>
+    <h2 id="goals"><a href="#goals">3. Goals</a></h2>
 
     <p>
       We want our flash messages to have the following behaviors:
@@ -141,7 +141,7 @@ keywords: "ViewChannel tutorial, ViewChannel flash message tutorial"
   </section>
 
   <section>
-    <h2 id="instantiating" ><a href="#instantiating">4. Instantiating</a></h2>
+    <h2 id="instantiating"><a href="#instantiating">4. Instantiating</a></h2>
 
     <p>
       The first step is to instantiate the ViewChannel in the flash-messages.js file:
@@ -173,7 +173,7 @@ export const flashMessageChannel = new window.uiloosViewChannel.ViewChannel(
       and a channel for confirmation dialogs in your application.
     </p>
 
-    <h2 id="presenting" ><a href="#presenting">5. Presenting</a></h2>
+    <h2 id="presenting"><a href="#presenting">5. Presenting</a></h2>
 
     <p>
       Lets first alter the subscriber function so it responds to the "PRESENT"
@@ -321,7 +321,7 @@ export const flashMessageChannel = new window.uiloosViewChannel.ViewChannel(
 
   </section>
 
-    <h2 id="dismissing" ><a href="#dismissing">6. Dismissing</a></h2>
+    <h2 id="dismissing"><a href="#dismissing">6. Dismissing</a></h2>
 
     <p>
       To be able to dismiss the flash message we need to change 
@@ -375,7 +375,7 @@ export const flashMessageChannel = new window.uiloosViewChannel.ViewChannel(
   </section>
 
   <section>
-    <h2 id="types" ><a href="#types">7. Message types</a></h2>
+    <h2 id="types"><a href="#types">7. Message types</a></h2>
     
     <p>
       Flash messages usually have different colors for different types of messages. 
@@ -509,7 +509,7 @@ document.getElementById('flashError').onclick = () => {
   </section>
 
   <section>
-    <h2 id="priority" ><a href="#priority">8. Priority</a></h2>
+    <h2 id="priority"><a href="#priority">8. Priority</a></h2>
 
     <p>
       One thing you might have noticed is that each of our flash message 
@@ -547,7 +547,7 @@ flashMessagesContainerEl.insertBefore(
       always on top.
     <p>
 
-    <h2 id="autodismiss" ><a href="#autodismiss">9. AutoDismiss</a></h2>
+    <h2 id="autodismiss"><a href="#autodismiss">9. AutoDismiss</a></h2>
 
     <p>
       We want the flash messages to dismiss automatically after a certain duration,
@@ -641,7 +641,7 @@ export function successFlashMessage(text) {
     </p>
 
   <section> 
-    <h2 id="animation" ><a href="#animation">10. Exit animation</a></h2>
+    <h2 id="animation"><a href="#animation">10. Exit animation</a></h2>
 
     <p>
       We already have a nice enter animation for the flash message, but 
@@ -677,7 +677,7 @@ onDismissed(event) {
   </section> 
 
   <section> 
-    <h2 id="playpause" ><a href="#playpause">11. Play & pause</a></h2>
+    <h2 id="playpause"><a href="#playpause">11. Play & pause</a></h2>
 
     <p>
       One thing about flash messages being automatically dismissed is that you
@@ -741,7 +741,7 @@ onAutoDismissPaused(event) {
   </section> 
 
   <section> 
-    <h2 id="what-you-have-learned" ><a href="#what-you-have-learned">12. What you have learned</a></h2>
+    <h2 id="what-you-have-learned"><a href="#what-you-have-learned">12. What you have learned</a></h2>
 
     <ol class="list-decimal m-2 mb-4">
       <li class="ml-8 mb-4">
@@ -770,7 +770,7 @@ onAutoDismissPaused(event) {
   </section>
 
   <section> 
-    <h2 id="further-reading" ><a href="#further-reading">13. Further reading</a></h2>
+    <h2 id="further-reading"><a href="#further-reading">13. Further reading</a></h2>
 
     <ol class="list-decimal m-2 mb-4">
       <li class="ml-8 mb-4">
@@ -782,7 +782,7 @@ onAutoDismissPaused(event) {
       </li>
       <li class="ml-8 mb-4">
         When using vanilla JavaScript you must handle DOM manipulation yourself, 
-        contrast this with <a href="/docs/view-channel/examples/" class="underline">the examples that use a JavaScript framework</a>.
+        contrast this with <a href="/docs/view-channel/examples/" class="underline">the examples that use a framework</a>.
       </li>
     </ol>
   </section> 
