Set release date 1.6.0

--- a/packages/website/src/pages/releases/angular/angular-releases.njk
+++ b/packages/website/src/pages/releases/angular/angular-releases.njk
@@ -34,7 +34,7 @@ keywords: "uiloos angular releases, angular release hub"
 
   <ol>
     <li>
-      <a href="/releases/angular/1.6.0/" class="font-mono">1.6.0 - TBA</a>
+      <a href="/releases/angular/1.6.0/" class="font-mono">1.6.0 - 2024-02-19</a>
     </li>
     <li>
       <a href="/releases/angular/1.5.0/" class="font-mono">1.5.0 - 2023-11-10</a>
