--- a/packages/website/src/pages/releases/core/1.6.0.njk
+++ b/packages/website/src/pages/releases/core/1.6.0.njk
@@ -27,7 +27,7 @@ keywords: "release notes @uiloos/core 1.6.0, changelog @uiloos/core 1.6.0"
   <!-- Title -->
   <h1>@uiloos/core 1.6.0</h1>
 
-  <p>Released on <span class="font-mono">TBA</span></p>
+  <p>Released on <span class="font-mono">2024-02-19</span></p>
 
   <p>
     This release introduces the <a href="/api/core/dategallery/" class="underline high">DateGallery</a> a
