--- a/packages/website/src/pages/releases/vue/1.6.0.njk
+++ b/packages/website/src/pages/releases/vue/1.6.0.njk
@@ -27,7 +27,7 @@ keywords: "release notes @uiloos/vue 1.6.0, changelog @uiloos/vue 1.6.0"
   <!-- Title -->
   <h1>@uiloos/vue 1.6.0</h1>
 
-  <p>Released on <span class="font-mono">TBA</span></p>
+  <p>Released on <span class="font-mono">2024-02-19</span></p>
 
   <p>
     This release makes <span class="high">@uiloos/vue</span> depend on
