--- a/packages/website/src/pages/releases/vue/vue-releases.njk
+++ b/packages/website/src/pages/releases/vue/vue-releases.njk
@@ -34,7 +34,7 @@ keywords: "uiloos vue releases, vue release hub"
 
   <ol>
     <li>
-      <a href="/releases/vue/1.6.0/" class="font-mono">1.6.0 - TBA</a>
+      <a href="/releases/vue/1.6.0/" class="font-mono">1.6.0 - 2024-02-19</a>
     </li>
     <li>
       <a href="/releases/vue/1.5.0/" class="font-mono">1.5.0 - 2023-11-10</a>
