--- a/packages/website/src/pages/docs/typewriter/concept.njk
+++ b/packages/website/src/pages/docs/typewriter/concept.njk
@@ -81,7 +81,7 @@ keywords: "Typewriter concept, Typewriter overview, Typewriter use-cases, multip
     <p>
       A Typewriter can be initialized by calling the <a href="/api/core/typewriter/#constructor" class="high underline">constructor</a>.
       The constructor takes two arguments the <a href="/api/core/typewriterconfig/" class="high underline">config</a>
-      and an optional <a href="/api/core/typewritersubscriber/" class="high underline">subscriber</a>
+      and an optional <a href="/api/core/typewritersubscriber/" class="high underline">subscriber</a>.
     </p>
 
     <p>
@@ -103,7 +103,7 @@ keywords: "Typewriter concept, Typewriter overview, Typewriter use-cases, multip
       When using reactive frameworks such as React, Vue, Angular or Svelte etc etc. 
       The subscriber is not necessary since your framework of choice will do the 
       heavy lifting of syncing the state of the Typewriter with the DOM. 
-      For more information see <a href="/docs/typewriter/usage-with-frameworks/" class="underline">"Usage with Framework"</a>
+      For more information see <a href="/docs/typewriter/usage-with-frameworks/" class="underline">"Usage with Frameworks"</a>
     </p>
 
     {% include './concepts/initialization.njk' %}
@@ -638,7 +638,7 @@ const actions = [{
 
   <a
     class="card"
-    href="/docs/typewriter/tutorial/"
+    href="/docs/typewriter/tutorials/"
   >
     <div>
       <div class="text-normal font-medium mb-1">Tutorials</div>
