--- a/packages/website/src/pages/releases/react/react-releases.njk
+++ b/packages/website/src/pages/releases/react/react-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos react releases, react release hub"
 
   <ol>
     <li>
+      <a href="/releases/react/1.6.0/" class="font-mono">1.6.0 - 2024-02-19</a>
+    </li>
+    <li>
       <a href="/releases/react/1.5.0/" class="font-mono">1.5.0 - 2023-11-10</a>
     </li>
     <li>
