website: better HTML comments for API pages
Added filter called `text2html` which takes a doc-comment in code and
transforms it into HTML. It creates paragraphs (<p>) and ordered lists
(ol) with <li> elements.

Only downside is that summations cannot have multiple lines now so had
to alter the "mode" comments of the DateGallery so this works.

Also removed strange return from `nlnl2br` filter.

For the ActiveList fixed the history doc comment added missing ".".

--- a/packages/website/src/pages/api/_includes/macros.njk
+++ b/packages/website/src/pages/api/_includes/macros.njk
@@ -127,15 +127,7 @@
 {% endmacro %}
 
 {% macro displayComment(def) %}
-  <p>
-  {% for summary in def.summary %}
-    {% if summary.kind == 'text' %}
-      {{summary.text | escape | nlnl2br | safe}}
-    {% else %}
-      <span class="high">{{summary.text | escape}}</span>
-    {% endif %}
-  {% endfor %}
-  </p>
+  {{def.summary | text2html | safe}}
 {% endmacro %}
 
 {% macro displayName(def) %}
